@@ -1,6 +1,6 @@
-MIDlet-Jar-URL: org.jvoicexml.jsapi2.jar
-MIDlet-Name: org.jvoicexml.jsapi2 MIDlet Suite
-MIDlet-Vendor: MIDlet Suite Vendor
 MIDlet-Version: 1.0.0
-MicroEdition-Configuration: CLDC-1.1
-MicroEdition-Profile: MIDP-2.1
+MIDlet-Vendor: MIDlet Suite Vendor
+MIDlet-Jar-URL: org.jvoicexml.jsapi2.jar
+MicroEdition-Configuration: CLDC-1.0
+MicroEdition-Profile: MIDP-1.0
+MIDlet-Name: org.jvoicexml.jsapi2 MIDlet Suite
